--- a/app/index.html
+++ b/app/index.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="utf-8">
     <title>Test</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/dartInvaderz.css">
   </head>
   <body>
   <div style="font-family: SpaceInvaderz;">.</div>
     <canvas id='canvas' tabindex ='0'></canvas>
         
-    <script src="main.dart" type="application/dart"></script>
+   <!-- script src="main.dart" type="application/dart"></script>  --> <
     <script src="main.dart.precompiled.js" ></script>
     
     <script src="packages/browser/dart.js"></script>
