Roaming character in Index

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <div style="font-family: SpaceInvaderz;">.</div>
     <canvas id='canvas' tabindex ='0'></canvas>
         
-   <!-- script src="main.dart" type="application/dart"></script>  --> <
+    <!-- <script src="main.dart" type="application/dart"></script>  -->
     <script src="main.dart.precompiled.js" ></script>
     
     <script src="packages/browser/dart.js"></script>
